--- a/config/i18n/locales/korean/translations.json
+++ b/config/i18n/locales/korean/translations.json
@@ -57,8 +57,10 @@
       "chinese": "Chinese",
       "english": "English",
       "espanol": "Spanish",
+      "french": "French",
       "italian": "Italian",
       "japanese": "Japanese",
+      "korean": "Korean",
       "portuguese": "Portuguese",
       "swahili": "Swahili",
       "urdu": "Urdu"
