feat: add test for ad-text i18n key, add they key and its value to all translation.json files except Chinese

--- a/config/i18n/locales/arabic/translations.json
+++ b/config/i18n/locales/arabic/translations.json
@@ -89,5 +89,6 @@
     "message": "متصفحك لا يدعم HTML5 {{ element }}.",
     "audio": "الصوت",
     "video": "الفيديو"
-  }
+  },
+  "ad-text": "Advertisement"
 }
