--- a/config/i18n/locales/japanese/translations.json
+++ b/config/i18n/locales/japanese/translations.json
@@ -89,5 +89,6 @@
     "message": "お使いのブラウザはHTML5{{ element }}をサポートしていません。",
     "audio": "オーディオ",
     "video": "ビデオ"
-  }
+  },
+  "ad-text": "Advertisement"
 }
