--- a/config/i18n/locales/urdu/translations.json
+++ b/config/i18n/locales/urdu/translations.json
@@ -90,5 +90,6 @@
     "message": "اپکا browser HTML 5 سپورٹ نہیں کرتا {{ element }}.",
     "audio": "audio",
     "video": "video"
-  }
+  },
+  "ad-text": "Advertisement"
 }
