--- a/config/i18n/locales/korean/translations.json
+++ b/config/i18n/locales/korean/translations.json
@@ -44,7 +44,7 @@
   "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers. {{ <0> }}Get started{{ </0> }}",
   "original-author-translator": {
     "roles": {
-      "author": "Author: {{ name }} ({{ locale }})",
+      "author": "Author: {{ name }}",
       "translator": "Translator: {{ name }}"
     },
     "details": {
