--- a/config/i18n/locales/german/translations.json
+++ b/config/i18n/locales/german/translations.json
@@ -33,23 +33,23 @@
   },
   "social-row": {
     "cta": {
-      "tweet-a-thanks": "Wenn du bis hierher gelesen hast, tweete dem Autor, um ihm zu zeigen, dass du ihn schätzt. {Tweete ein Dankeschön{{ </0> }}",
-      "tweet-it": "Wenn dieser Artikel hilfreich war, {{ <0> }} tweete ihn{{ </0> }}."
+      "tweet-a-thanks": "Wenn du bis hierher gelesen hast, tweete dem Autor, um ihm zu zeigen, dass du ihn schätzt. {{ <0> }}Tweete ein Dankeschön{{ </0> }}",
+      "tweet-it": "Wenn dieser Artikel hilfreich war, {{ <0> }}tweete ihn{{ </0> }}."
     },
     "tweets": {
       "default": "Vielen Dank {{ author }}, dass du diesen hilfreichen Artikel geschrieben hast.",
-      "translation": "Vielen Dank {{ Autor }} für diesen hilfreichen Artikel und {{ translator }} für die Übersetzung."
+      "translation": "Vielen Dank {{ author }} für diesen hilfreichen Artikel und {{ translator }} für die Übersetzung."
     }
   },
-  "learn-to-code-cta": "Lerne kostenlos programmieren. Der Open-Source-Lehrplan von freeCodeCamp hat schon mehr als 40.000 Menschen geholfen, einen Job als Entwickler zu finden. Los geht's{{ <0> }}Beginnen{{ </0> }}",
+  "learn-to-code-cta": "Lerne kostenlos programmieren. Der Open-Source-Lehrplan von freeCodeCamp hat schon mehr als 40.000 Menschen geholfen, einen Job als Entwickler zu finden. Los geht's {{ <0> }}Beginnen{{ </0> }}",
   "original-author-translator": {
     "roles": {
-      "author": "Autor: {{ Name }} ({{ locale }})",
-      "translator": "Übersetzer: {{ Name }}"
+      "author": "Autor: {{ name }} ({{ locale }})",
+      "translator": "Übersetzer: {{ name }}"
     },
     "details": {
       "original-article": "{{ <0> }}Originalartikel:{{ </0> }} {{ title }} von {{ author }}",
-      "translated-by": "{{ <0> }}Übersetzt von:{{ </0> }} {{ Übersetzer }}"
+      "translated-by": "{{ <0> }}Übersetzt von:{{ </0> }} {{ translator }}"
     },
     "locales": {
       "arabic": "Arabisch",
@@ -89,7 +89,7 @@
     }
   },
   "fallback": {
-    "message": "Dein Browser unterstützt kein HTML5 {{ Element }}.",
+    "message": "Dein Browser unterstützt kein HTML5 {{ element }}.",
     "audio": "Audio",
     "video": "Video"
   },
