--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -44,26 +44,12 @@
   "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers. {{ <0> }}Get started{{ </0> }}",
   "original-author-translator": {
     "roles": {
-      "author": "Author: {{ name }} ({{ locale }})",
+      "author": "Author: {{ name }}",
       "translator": "Translator: {{ name }}"
     },
     "details": {
       "original-article": "{{ <0> }}Original article:{{ </0> }} {{ title }} by {{ author }}",
       "translated-by": "{{ <0> }}Translated by:{{ </0> }} {{ translator }}"
-    },
-    "locales": {
-      "arabic": "Arabic",
-      "bengali": "Bengali",
-      "chinese": "Chinese",
-      "english": "English",
-      "espanol": "Spanish",
-      "french": "French",
-      "italian": "Italian",
-      "japanese": "Japanese",
-      "korean": "Korean",
-      "portuguese": "Portuguese",
-      "swahili": "Swahili",
-      "urdu": "Urdu"
     }
   },
   "embed-title": "Embedded content",
