fix: update German forum link

--- a/config/i18n/locales/german/links.json
+++ b/config/i18n/locales/german/links.json
@@ -1,5 +1,5 @@
 {
-  "forum": "https://forum.freecodecamp.org/",
+  "forum": "https://forum.freecodecamp.org/c/german/577",
   "donate": "https://www.freecodecamp.org/donate/",
   "banner": {
     "default": "https://www.freecodecamp.org/",
