feat: set search bar placeholder based on number of entries in index

--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -7,7 +7,10 @@
   "search": {
     "label": "Search",
     "accessible-name": "Submit your search query",
-    "placeholder": "Search 9,000+ tutorials",
+    "placeholder": {
+      "generic": "Search our tutorials",
+      "numbered": "Search {{ roundedHits }}+ tutorials"
+    },
     "see-results": "See all results for {{ searchQuery }}",
     "no-tutorials": "No tutorials found"
   },
