feat: add ci/cd pipeline article redirect

--- a/config/i18n/locales/english/serve.json
+++ b/config/i18n/locales/english/serve.json
@@ -21,6 +21,11 @@
       "destination": "/news/about"
     },
     {
+      "source": "/automate-mern-app-deployment-with-jenkins-and-aws",
+      "destination": "/news/automate-mern-app-deployment-with-jenkins",
+      "type": 302
+    },
+    {
       "source": "/intoduction-to-nodejs",
       "destination": "/news/introduction-to-nodejs",
       "type": 302
