--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -54,8 +54,6 @@
       "original-article": "{{ <0> }}Original article:{{ </0> }} {{ title }}"
     },
     "locales": {
-      "arabic": "Arabic",
-      "bengali": "Bengali",
       "chinese": "Chinese",
       "english": "English",
       "espanol": "Spanish",
@@ -64,7 +62,7 @@
       "japanese": "Japanese",
       "korean": "Korean",
       "portuguese": "Portuguese",
-      "swahili": "Swahili",
+      "ukrainian": "Ukrainian",
       "urdu": "Urdu"
     }
   },
