--- a/config/i18n/locales/japanese/translations.json
+++ b/config/i18n/locales/japanese/translations.json
@@ -7,17 +7,14 @@
   "search": {
     "label": "検索",
     "accessible-name": "検索クエリを送信",
-    "placeholder": {
-      "default": "投稿を検索",
-      "numbered": "{{ roundedTotalRecords }} 件以上の投稿を検索"
-    },
-    "see-results": "{{ searchQuery }} のすべての結果を見る",
+    "placeholder": "投稿を検索",
+    "see-results": "すべての結果を表示: {{ searchQuery }}",
     "no-tutorials": "投稿が見つかりませんでした"
   },
   "banner": {
     "default": "コーディングを学ぶ — {{ <0> }}約 3,000 時間のカリキュラムが無料{{ </0> }}",
-    "authenticated": "当団体とその使命をご支援ください。{{ <0> }}freeCodeCamp.org へのご寄付をお願いします{{ </0> }}。",
-    "authenticated-donor": "freeCodeCamp への{{ <0> }}寄付{{ </0> }}によるご支援、誠にありがとうございます。"
+    "authenticated": "当非営利団体とその使命をご支援ください。{{ <0> }}freeCodeCamp.org へのご寄付をお願いします{{ </0> }}。",
+    "authenticated-donor": "freeCodeCamp への{{ <0> }}ご寄付{{ </0> }}によるご支援、誠にありがとうございます。"
   },
   "default-bio": "{{ <0> }}他の投稿{{ </0> }}を読む。",
   "author": {
@@ -26,7 +23,7 @@
     "multiple-posts": "{{ postCount }} 件の投稿"
   },
   "tag": {
-    "no-posts": "投稿一覧",
+    "no-posts": "投稿の一覧",
     "one-post": "1 件の投稿",
     "multiple-posts": "{{ postCount }} 件の投稿"
   },
@@ -51,24 +48,24 @@
       "translator": "翻訳: {{ name }}"
     },
     "details": {
-      "original-article": "{{ <0> }}原文:{{ </0> }} {{ title }}"
+      "original-article": "{{ <0> }}原文:{{ </0> }} {{ title }} ({{ author }})",
+      "translated-by": "{{ <0> }}翻訳・翻案:{{ </0> }} {{ translator }}"
     },
     "locales": {
-      "chinese": "中国語",
       "english": "英語",
       "espanol": "スペイン語",
-      "french": "フランス語",
+      "chinese": "中国語",
+      "portuguese": "ポルトガル語",
       "italian": "イタリア語",
       "japanese": "日本語",
-      "korean": "韓国語",
-      "portuguese": "ポルトガル語",
-      "ukrainian": "Ukrainian",
-      "urdu": "ウルドゥー語"
+      "arabic": "アラビア語",
+      "urdu": "ウルドゥー語",
+      "bengali": "ベンガル語"
     }
   },
   "embed-title": "埋め込みコンテンツ",
   "footer": {
-    "tax-exempt-status": "freeCodeCamp は皆様のご寄付により支えられている非課税の 501(c)(3) 慈善団体です。(United States Federal Tax Identification Number: 82-0779546)",
+    "tax-exempt-status": "freeCodeCamp は皆様のご寄付により支えられている非課税の 501(c)(3) 非営利団体です。(United States Federal Tax Identification Number: 82-0779546)",
     "mission-statement": "私たちのミッション: 人々が無料でコーディングを学べるよう支援することです。その実現のため、何千もの動画、記事、インタラクティブなコーディングレッスンを作成し、すべて無料で公開しています。さらに、数千の freeCodeCamp スタディグループが世界中に存在します。",
     "donation-initiatives": "freeCodeCamp への寄付は教育活動のために用いられ、サーバー、サービス、スタッフなどの費用に充てられます。",
     "donate-text": "{{ <0> }}こちらからご寄付をお願いいたします{{ </0> }}。(場合により税控除可能)",
@@ -89,9 +86,9 @@
     }
   },
   "fallback": {
-    "message": "お使いのブラウザは HTML5 {{ element }} をサポートしていません。",
+    "message": "お使いのブラウザはHTML5{{ element }}をサポートしていません。",
     "audio": "オーディオ",
     "video": "ビデオ"
   },
-  "ad-text": "広告"
+  "ad-text": "Advertisement"
 }
