--- a/config/i18n/locales/urdu/translations.json
+++ b/config/i18n/locales/urdu/translations.json
@@ -6,29 +6,26 @@
   },
   "search": {
     "label": "سرچ کریں",
-    "accessible-name": "اپنی search query لکھیں",
-    "placeholder": {
-      "default": "متعدد tutorials میں سے search کریں",
-      "numbered": "{{ roundedTotalRecords }}+ tutorials میں سے search کریں"
-    },
+    "accessible-name": "اپنی search query لکھیں ",
+    "placeholder": "متعدد tutorials میں سے search کریں ",
     "see-results": "  کے سارے results دیکھیں {{ searchQuery }}",
     "no-tutorials": "کوئی ٹٹوریل نہیں مل سکا "
   },
   "banner": {
     "default": "{{ <0> }}کوڈ کرنا سیکھیں 3000 گھنٹوں کا مفت نصاب{{ </0> }}",
-    "authenticated": "ہماری charity کی حمایت کریں {{ <0> }}freeCodeCamp کو عطیہ دیں{{ </0> }}",
-    "authenticated-donor": "{{ <0> }}اپنے عطیات{{ </0> }} کے ذریعے freeCodeCamp کی حمایت کرنے کا شکریہ۔"
+    "authenticated": "ہمارے non profit mission کی حمایت کریں. {{ <0> }}freeCodeCamp کو عطیہ دیں{{ </0> }}",
+    "authenticated-donor": "اپنے {{ </0> }}عطیات{{ <0> }} کے ذریعے freeCodeCamp کی حمایت کرنے کا شکریہ."
   },
-  "default-bio": "{{ <0> }} مزید پوسٹس {{ </0> }} پڑھیں۔",
+  "default-bio": "{{ <0> }} مزید پوسٹس  {{ </0> }}  پڑھیں.",
   "author": {
     "no-posts": "کوئی post نہیں",
-    "one-post": "1 پوسٹ",
-    "multiple-posts": "{{ postCount }} پوسٹس"
+    "one-post": "1 post",
+    "multiple-posts": "{{ postCount }} posts"
   },
   "tag": {
-    "no-posts": "کچھ پوسٹس کی کلیکشن",
+    "no-posts": "کچھ پوسٹس کی کلیکشن ",
     "one-post": "ایک post کی کلیکشن",
-    "multiple-posts": "کی کلیکشن {{ postCount }}"
+    "multiple-posts": "کی کلیکشن {{ postCount }} "
   },
   "404": {
     "page-not-found": "page نہیں مل سکا",
@@ -40,7 +37,7 @@
       "tweet-it": " {{ <0> }}Tweet  کریں{{ </0> }} اگر یہ آرٹیکل مفید لگا تو "
     },
     "tweets": {
-      "default": "آپ کا بہت شکریہ، آپ نیں یہ آرٹیکل لکھا.  {{ author }}۔",
+      "default": "آپ کا بہت شکریہ، آپ نیں یہ آرٹیکل لکھا.  {{ author }} .",
       "translation": "مصنف: {{ author }} کا یہ مفید مضمون لکھنے کے لیے، اور مترجم: {{ translator }} کا ترجمہ کرنے کا شکریہ۔"
     }
   },
@@ -51,33 +48,34 @@
       "translator": "مترجم: {{ name }}"
     },
     "details": {
-      "original-article": "{{ <0> }}اصل مضمون:{{ </0> }} {{ title }}"
+      "original-article": "{{ <0> }}اصل مضمون:{{ </0> }} {{ title }} مضمون نگار {{ author }}",
+      "translated-by": "{{ <0> }}مترجم :{{ </0> }} {{ translator }}"
     },
     "locales": {
-      "chinese": "چینی",
       "english": "انگریزی",
       "espanol": "ہسپانوی",
-      "french": "فرانسیسی",
+      "chinese": "چینی",
+      "portuguese": "پرتگالی",
       "italian": "اطالوی",
       "japanese": "جاپانی",
-      "korean": "کوریائی",
-      "portuguese": "پرتگالی",
-      "ukrainian": "Ukrainian",
-      "urdu": "اردو"
+      "arabic": "عربی",
+      "urdu": "اردو",
+      "bengali": "بنگالی"
     }
   },
   "embed-title": "Embedded content",
   "footer": {
     "tax-exempt-status": "freeCodeCamp ایک ڈونر سپورٹڈ ٹیکس سے مستثنیٰ 501(c)(3) غیر منفعتی تنظیم ہے (امریکہ کا وفاقی ٹیکس شناختی نمبر: 82-0779546)",
-    "mission-statement": "ہمارا مشن: لوگوں کو مفت میں کوڈ سیکھنے میں مدد کرنا۔ ہم اسے ہزاروں ویڈیوز، مضامین، اور انٹرایکٹو کوڈنگ اسباق بنا کر پورا کرتے ہیں - یہ سب عوام کے لیے  publicly دستیاب ہیں۔ ہمارے پاس دنیا بھر میں ہزاروں freeCodeCamp اسٹڈی گروپس بھی ہیں۔ ",
-    "donation-initiatives": "freeCodeCamp کو عطیات ہمارے تعلیمی اقدامات کی طرف جاتے ہیں، اور سرورز، services اور عملے کی تنخواہ کی ادائیگی میں مدد کرتے ہیں۔ ",
-    "donate-text": "{{ <0> }} آپ یہاں ایک ٹیکس deductible donation دے سکتے ہیں. {{ </0> }}۔",
-    "trending-guides": "ٹرینڈنگ گائیڈز",
-    "our-nonprofit": "ہمارا صدقہ",
+    "mission-statement": "ہمارا مشن: لوگوں کو مفت میں کوڈ سیکھنے میں مدد کرنا۔ ہم اسے ہزاروں ویڈیوز، مضامین، اور انٹرایکٹو کوڈنگ اسباق بنا کر پورا کرتے ہیں - یہ سب عوام کے لیے  publicly دستیاب ہیں۔ ہمارے پاس دنیا بھر میں ہزاروں freeCodeCamp اسٹڈی گروپس بھی ہیں۔",
+    "donation-initiatives": "freeCodeCamp کو عطیات ہمارے تعلیمی اقدامات کی طرف جاتے ہیں، اور سرورز، services اور عملے کی تنخواہ کی ادائیگی میں مدد کرتے ہیں۔",
+    "donate-text": "{{ <0> }} آپ یہاں ایک ٹیکس deductible donation دے سکتے ہیں. {{ </0> }}",
+
+    "trending-guides": "Trending Guides",
+    "our-nonprofit": "Our Nonprofit",
     "links": {
-      "about": "ہمارے بارے میں",
-      "alumni": "سابق طلباء نیٹ ورک",
-      "open-source": "اوپن سورس",
+      "about": "About",
+      "alumni": "Alumni Network",
+      "open-source": "Open Source",
       "shop": "دکان",
       "support": "مدد",
       "sponsors": "سپانسرز",
@@ -90,8 +88,8 @@
   },
   "fallback": {
     "message": "اپکا browser HTML 5 سپورٹ نہیں کرتا {{ element }}.",
-    "audio": "آڈیو",
-    "video": "ویڈیو"
+    "audio": "audio",
+    "video": "video"
   },
-  "ad-text": "اشتہار"
+  "ad-text": "Advertisement"
 }
