chore: add redirect for HTML and CSS handbook

--- a/config/i18n/locales/english/redirects.json
+++ b/config/i18n/locales/english/redirects.json
@@ -20,6 +20,11 @@
     "destination": "/news/about"
   },
   {
+    "source": "/html-css-handbook-for-beginners",
+    "destination": "/news/the-html-handbook",
+    "type": 302
+  },
+  {
     "source": "/how-to-change-color-in-matplotlip",
     "destination": "/news/how-to-change-color-in-matplotlib",
     "type": 302
