--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -36,8 +36,8 @@
   },
   "social-row": {
     "cta": {
-      "tweet-a-thanks": "If you read this far, tweet to the author to show them you care. {{ <0> }}Tweet a thanks{{ </0> }}",
-      "tweet-it": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}."
+      "tweet-a-thanks": "If you read this far, thank the author to show them you care. {{ <0> }}Say Thanks{{ </0> }}",
+      "tweet-it": "If this article was helpful, {{ <0> }}share it{{ </0> }}."
     },
     "tweets": {
       "default": "Thank you {{ author }} for writing this helpful article.",
