feat: update trending title

--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -72,7 +72,7 @@
     "mission-statement": "Our mission: to help people learn to code for free. We accomplish this by creating thousands of videos, articles, and interactive coding lessons - all freely available to the public.",
     "donation-initiatives": "Donations to freeCodeCamp go toward our education initiatives, and help pay for servers, services, and staff.",
     "donate-text": "You can {{ <0> }}make a tax-deductible donation here{{ </0> }}.",
-    "trending-guides": "Trending Guides",
+    "trending-books-and-handbooks": "Trending Books and Handbooks",
     "mobile-app": "Mobile App",
     "our-nonprofit": "Our Charity",
     "links": {
