--- a/config/i18n/locales/japanese/meta-tags.json
+++ b/config/i18n/locales/japanese/meta-tags.json
@@ -1,5 +1,5 @@
 {
   "title": "freeCodeCamp プログラミングチュートリアル: Python, JavaScript, Git 他",
   "keywords": "freeCodeCamp, フリーコードキャンプ, プログラミング, フロントエンド, プログラマー, 記事, 正規表現, Python, JavaScript, AWS, JSON, HTML, CSS, Bootstrap, React, Vue, Webpack",
-  "description": "エキスパートによって書かれた多数のプログラミングチュートリアルを読むことができます。ウェブ開発、データサイエンス、DevOps、セキュリティなどについて学び、開発者のキャリアに関するアドバイスを得ましょう。"
+  "description": "エキスパートの手によるプログラミングチュートリアル記事を幅広く掲載。ウェブ開発、データサイエンス、DevOps、セキュリティ、開発者としてのキャリアなどについて学びましょう。"
 }
