chore: start bluesky conversions

--- a/config/i18n/locales/english/links.json
+++ b/config/i18n/locales/english/links.json
@@ -8,6 +8,7 @@
   },
   "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
   "twitter": "https://twitter.com/freecodecamp",
+  "bluesky": "https://bsky.app/profile/freecodecamp.bsky.social",
   "footer": {
     "about": "https://www.freecodecamp.org/news/about/",
     "support": "https://www.freecodecamp.org/news/support/",
