--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -12,7 +12,7 @@
       "numbered": "Search {{ roundedTotalRecords }}+ news articles, tutorials and books"
     },
     "see-results": "See all results for {{ searchQuery }}",
-    "no-tutorials": "No tutorials found"
+    "no-results": "No results found"
   },
   "banner": {
     "default": "Learn to code — {{ <0> }}free 3,000-hour curriculum{{ </0> }}",
