--- a/config/i18n/locales/english/translations.json
+++ b/config/i18n/locales/english/translations.json
@@ -8,8 +8,8 @@
     "label": "Search",
     "accessible-name": "Submit your search query",
     "placeholder": {
-      "default": "Search our news articles, tutorials and books",
-      "numbered": "Search {{ roundedTotalRecords }}+ news articles, tutorials and books"
+      "default": "Search our news articles, tutorials, and books",
+      "numbered": "Search {{ roundedTotalRecords }}+ news articles, tutorials, and books"
     },
     "see-results": "See all results for {{ searchQuery }}",
     "no-results": "No results found"
